<resources>
    <string name="app_name">My Application</string>
    <string name="textViewTitle">Créer un compte</string>
    <string name="qrCodeGenerator">QR Code</string>
    <string name="registrationBtn">Remplir le formulaire manuellement</string>

    <string name="signup_txt_firstname">Prénom</string>
    <string name="signup_txt_lastname">Nom</string>
    <string name="signup_txt_address">Adresse</string>
    <string name="signup_txt_city">Ville</string>
    <string name="signup_txt_zipcode">Code Postal</string>
    <string name="signup_txt_email">Email</string>
    <string name="signup_loyalty_card">Carte de fidélité</string>
    <string name="signup_btn_signup">Créer mon compte</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>