<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomeActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextLastName"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_lastname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_firstname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextAddress"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_address"
                android:inputType="text" />

            <EditText
                android:id="@+id/editPostalAddress"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_zipcode"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editTextCity"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_txt_city"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextLoyaltyCard"
                style="@style/InputRegister"
                android:ems="10"
                android:hint="@string/signup_loyalty_card"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/updateButton"
                style="@style/HomeButton"
                android:text="Enregistrer Modification"
                app:rippleColor="#D1A0A0" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Ajouter ici les autres éléments de mise en page -->

        <!-- Layout pour le footer -->
        <LinearLayout
            android:id="@+id/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <!-- Ajouter ici les éléments de mise en page pour le footer -->
            <Button

                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_200"
                android:text="Carte"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_200"

                android:text="Offres"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_200"
                android:text="Magasins"
                />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>